# DigitalWardrobe

./: .agent-instructions.md  .env.example  .gitignore  BUILD.md  Dockerfile  README.md  capacitor.config.json  db.js  export-data.js  import-data.js  index.html  migrate-to-neon.js  package-lock.json  package.json  server.js  vite.config.js
mobile/: index.html  index.js  styles.css
src/: app.js  auth.js  config.js  styles.css  sync.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: modal.js  purchaseForm.js  table.js
src/views/: finance.js  wardrobe.js
