[package]
name = "digital-wardrobe"
version = "0.1.0"
description = "電子衣櫥 - 數位化管理您的衣物"
authors = ["Digital Wardrobe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open", "protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
